--- a/index.html
+++ b/index.html
@@ -16,9 +16,17 @@
 
 
 <body>
-    <section id="landing"></section>
+    <section id="landing">
     <nav>
-        <div class="row nav__row"></div>
+        <div class="row nav__row">
+            <div class="nav__logo">
+                
+            </div>
+        </div>
     </nav>
+    <header>
+
+    </header>
+    </section>    
 </body>
 </html>
